--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
+
+spring.mail.host=localhost
+spring.mail.port=3333
+spring.mail.properties.mail.smtp.auth=false
