feat: actuators study

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.datasource.password=
 spring.mail.host=localhost
 spring.mail.port=3333
 spring.mail.properties.mail.smtp.auth=false
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.group.custom.include=diskSpace,ping
+management.endpoint.health.group.custom.show-components=always
+management.endpoint.health.group.custom.show-details=always
+management.security.enabled=false
