--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.subethamail</groupId>
 			<artifactId>subethasmtp</artifactId>
 			<version>3.1.7</version>
@@ -106,7 +111,6 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
-
 
 	</dependencies>
 
