--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.h2.console.enabled=true
+
 spring.mail.host=localhost
 spring.mail.port=3333
 spring.mail.properties.mail.smtp.auth=false
