feat: finish "Guide to @ConfigurationProperties in Spring Boot"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,24 @@ spring.mail.host=localhost
 spring.mail.port=3333
 spring.mail.properties.mail.smtp.auth=false
 
+#Simple properties
+mail.hostname=mailer@mail.com
+mail.port=9000
+mail.from=mailer@mail.com
+
+#List properties
+mail.defaultRecipients[0]=admin@mail.com
+mail.defaultRecipients[1]=owner@mail.com
+
+#Map Properties
+mail.additionalHeaders.redelivery=true
+mail.additionalHeaders.secure=true
+
+#Object properties
+mail.credentials.username=john
+mail.credentials.password=password
+mail.credentials.authMethod=SHA1
+
 management.endpoints.web.exposure.include=*
 management.endpoint.health.group.custom.include=diskSpace,ping
 management.endpoint.health.group.custom.show-components=always
