--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.16.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
