feat: logging routes
Finish "Spring Boot - Testing":
- Quick Guide to RestClientTest in Spring Boot (no code)
- Logging in Spring Boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,5 @@ management.endpoint.health.group.custom.include=diskSpace,ping
 management.endpoint.health.group.custom.show-components=always
 management.endpoint.health.group.custom.show-details=always
 management.security.enabled=false
+
+logging.level.com.guilhermebalog.hello=TRACE
