--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
 			<version>6.0.16.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
