feat: finish last section! :tada:
Section "Spring Boot - Persistence"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
 
+#Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
@@ -11,9 +12,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 
+#Mail
 spring.mail.host=localhost
 spring.mail.port=3333
 spring.mail.properties.mail.smtp.auth=false
@@ -36,10 +39,15 @@ mail.credentials.username=john
 mail.credentials.password=password
 mail.credentials.authMethod=SHA1
 
+#Health
 management.endpoints.web.exposure.include=*
 management.endpoint.health.group.custom.include=diskSpace,ping
 management.endpoint.health.group.custom.show-components=always
 management.endpoint.health.group.custom.show-details=always
 management.security.enabled=false
 
-logging.level.com.guilhermebalog.hello=TRACE
+#Logging Levels per package
+# logging.level.com.guilhermebalog.hello=TRACE
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
